turmites.lessons.turmites.langtoncolors.LangtonColors.scala.error
LangtonsAnt:8: error: identifier expected but ':' found.
def PosCouleur (c:Color T:Array[Color]) {
                         ^LangtonsAnt:40: error: ')' expected but '}' found.
}
^