turmites.lessons.turmites.langtoncolors.LangtonColors.scala.code
def setCouleurSol(c:Color) {
	setCouleurBrosse(c)
	baisseBrosse()
	leveBrosse()
}

def PosCouleur (c:Color T:Array[Color]) {
		var l = T.length
		for (i<- 0 to l-1) {
			if (c == T(i) ) {return i}
		}
	return -1}


def step(rule:Array[Char], colors:Array[Color]) {
	var k : Color = PosCouleur(getCouleurSol(),colors) 
	rule match{  
		case "R"	=> setCouleurSol(k);droite();avance()
		case "L" =>  setCouleurSol(k);gauche();avance()
	}
	
}
